--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>Fan Site - Index</title>
         <link rel="stylesheet"href="main.css">
         <style>
 
@@ -10,7 +10,7 @@
     </head>
     <body>
 
-    <div id="banner"><div>
+    <a href="index.html"><div id="banner"><div></a>
         <h1>Angie's Webpage</h1>
         <h2>The best websites on the web!</h2>
 	<div id="nav"></div>
