--- a/refrences.html
+++ b/refrences.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>Fan Site - Index</title>
         <link rel="stylesheet"href="main.css">
         <style>
 
@@ -10,17 +10,19 @@
     </head>
     <body>
 
-    <div id="banner"><div>
+    <a href="index.html"><div id="banner"><div></a>
         <h1>Angie's Webpage</h1>
         <h2>The best websites on the web!</h2>
 	<div id="nav"></div>
-    <a href="refrences.html">Refrences</a>
+    <a href="refrences.html">Home</a>
     <a href="refrences.html">Refrences</a>
     <a href="refrences.html">Refrences</a>
     <a href="refrences.html">Refrences</a>
     <a href="refrences.html">Refrences</a>
 	<div id="wrapper"></div>
-		<div id="main"></div>
+		<div id="main">
+      <p>“Romeo Santos.” Wikipedia, Wikimedia Foundation, 30 Dec. 2019, en.wikipedia.org/wiki/Romeo_Santos. </p>     
+        </div>
 		<div id="side"></div>
 	</div>
     <div id="footer">c 2017 Angie</div>
